<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_for_moves"
        android:title="@string/sort"
        android:visible="true"
        app:showAsAction="always">

        <menu>
            <group
                android:id="@+id/menu_sort_group">

                <item
                    android:id="@+id/menu_sort_popularity"
                    android:title="@string/most_popular" />
                <item
                    android:id="@+id/menu_sort_top_rated"
                    android:title="@string/top_rated" />

                <item
                    android:id="@+id/menu_sort_upcoming"
                    android:title="@string/upcoming" />
                <item
                    android:id="@+id/menu_sort_fav"
                    android:title="@string/order_by_favourites" />
            </group>
        </menu>
    </item>
</menu>